syntax = "proto3";

message CreateAccountRequest 
{
	string sessionId = 1;
    string Id = 2;
    string Password = 3;
}